fixed images not showing up in hall cards and moved the css to the css file

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -85,8 +85,8 @@
 .my-status {
     width: 355px;
     height: 358px;
-    
-    
+
+
     border: 1px solid #CDCDCD;
     border-radius: 12px;
 }
@@ -104,8 +104,8 @@
 }
 
 .my-status.nothing {
-/*    background: linear-gradient(180deg, #cccccc 28%, #808080 83.5%);*/
- /*temporary*/
+    /*    background: linear-gradient(180deg, #cccccc 28%, #808080 83.5%);*/
+    /*temporary*/
     background-color: black;
 }
 
@@ -192,7 +192,7 @@
     background-color: var(--primary) !important;
     border-color: var(--primary) !important;
 }
-    
+
 /* Admin Form with list Temp Code Might be removed */
 .admin-form-card {
     background-color: #F7F7F7; /* Custom background color */
@@ -227,7 +227,7 @@
 
 }
 .form-group.required .form-label:after {
-  content:"*";
+    content:"*";
   color:red !important;;
 }
 
@@ -241,4 +241,29 @@
 }
 .bg-login-image {
     background-color: gray;
+}
+
+/*homepage*/
+.hero {
+    position: relative;
+    background: url(../images/hero8.webp) no-repeat !important;
+    background-size: cover !important;
+    background-position: bottom !important;
+    height: 40vh !important;
+}
+
+.hero::before {
+    content: '';
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.25); /* Adjust the opacity and color as needed */
+    z-index: 1;
+}
+
+.hero .container-fluid {
+    position: relative;
+    z-index: 2;
 }
